Fix alignment of grids

--- a/client/public/card.css
+++ b/client/public/card.css
@@ -6,20 +6,23 @@ body {
   margin: 0px;
 }
 #main-screen {
+  height: 100%;
+  width: 100%;
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: auto 450px 100px 100px;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 450px auto auto;
+  overflow: scroll;
 }
 
 .form {
   position: absolute;
   height: 90%;
   width: 90%;
+  left: 5%;
+  top: 5%;
   background-color: white;
   z-index: 10;
   opacity: 0.9;
-  left: 5%;
-  top: 5%;
 }
 
 .background {
@@ -36,32 +39,29 @@ body {
 }
 
 .start-game {
-  grid-column-start: 5;
-  grid-column-end: 9;
+  grid-column-start: 1;
   color: white;
   text-shadow: -1px -1px 0 grey, 1px -1px 0 grey, -1px 1px 0 grey, 1px 1px 0 grey;
   font-size: 3em;
-  margin-top: 5%;
-  margin-bottom: 1%;
+  /* margin-bottom: 1%; */
   text-align: center;
   cursor: pointer;
+  margin-top:1%;
 }
 
 .start-game:hover {
-  grid-column-start: 5;
-  grid-column-end: 9;
+  grid-column-start: 1;
   color: white;
   text-shadow: -1px -1px 0 grey, 1px -1px 0 grey, -1px 1px 0 grey, 1px 1px 0 grey;
   font-size: 3.5em;
-  margin-top: 5%;
-  margin-bottom: 1%;
+  /* margin-bottom: 1%; */
   text-align: center;
   cursor: pointer;
   transition: 1s;
 }
 
 .next-round {
-  grid-area: 4 / 5 / 4 / 9;
+  grid-area: 4 / 1 / 4 / 1;
   color: white;
   text-shadow: -1px -1px 0 grey, 1px -1px 0 grey, -1px 1px 0 grey, 1px 1px 0 grey;
   margin: 2%;
@@ -72,7 +72,7 @@ body {
 }
 
 .next-round:hover {
-  grid-area: 4 / 5 / 4 / 9;
+  grid-area: 4 / 1 / 4 / 1;
   color: white;
   text-shadow: -1px -1px 0 grey, 1px -1px 0 grey, -1px 1px 0 grey, 1px 1px 0 grey;
   margin: 2%;
@@ -84,7 +84,7 @@ body {
 }
 
 .end-game {
-  grid-area: 5 / 5 / 5 / 9;
+  grid-area: 5 / 1 / 5 / 1;
   color: white;
   text-shadow: -1px -1px 0 grey, 1px -1px 0 grey, -1px 1px 0 grey, 1px 1px 0 grey;
   margin: 2%;
@@ -95,7 +95,7 @@ body {
 }
 
 .end-game:hover {
-  grid-area: 5 / 5 / 5 / 9;
+  grid-area: 5 / 1 / 5 / 1;
   color: white;
   text-shadow: -1px -1px 0 grey, 1px -1px 0 grey, -1px 1px 0 grey, 1px 1px 0 grey;
   margin: 2%;
